--- a/admin-core/src/main/resources/codeTemplate/html/add.html
+++ b/admin-core/src/main/resources/codeTemplate/html/add.html
@@ -11,20 +11,21 @@
     <div class="layui-row">
         <div class="layui-form-item">
 		@for(item in array){
-		@if(item==null){continue;}
-		
+			@if(item==null){continue;}
+			@if(item.name=="delFlag"){continue;}
+			@if(item.name=="version"){continue;}
+			@if(item.name=="attachmentId"){continue;}
             <div class="layui-inline">
             <label class="layui-form-label">${item.displayName}</label>
-            <div class="layui-input-inline">
-				@if(isEmpty(item.dictType)){
-                <input type="text" name="${item.name}" class="layui-input${item.javaType=='Date'?' input-date'}" ${isNotEmpty(item.verifyList)?('lay-verify="'+verifyFormat(item.verifyList)+'"'):''}>
-				@}else{
-                <layui:simpleDictSelect style='layui-input-inline' type="${item.dictType}" layVerify="${verifyFormat(item.verifyList)}" 
-                			id="${item.name}" name="${item.name}" value="" />
-				@}
+				<div class="layui-input-inline">
+					@if(isEmpty(item.dictType)){
+					<input type="text" name="${item.name}" class="layui-input${item.javaType=='Date'?' input-date'}" ${isNotEmpty(item.verifyList)?('lay-verify="'+verifyFormat(item.verifyList)+'"'):''}>
+					@}else{
+					<layui:simpleDictSelect style='layui-input-inline' type="${item.dictType}" layVerify="${verifyFormat(item.verifyList)}"
+								id="${item.name}" name="${item.name}" value="" />
+					@}
+				</div>
             </div>
-            </div>
-		
 		@}
         </div>
     </div>
