--- a/admin-core/src/main/resources/codeTemplate/html/edit.html
+++ b/admin-core/src/main/resources/codeTemplate/html/edit.html
@@ -1,4 +1,4 @@
-<!--# layout("/common/layout.html",{"jsBase":"/js/${target.urlBase}/${entity.code}/"}){ -->
+<!--# layout("/common/layout.html",{"jsBase":"/js/${target.urlBase}/${entity.username}/"}){ -->
 
 <form class="layui-form layui-form-pane" id="updateForm">
 	@ var list = entity.generalList;
@@ -12,17 +12,17 @@
         <div class="layui-form-item">
 		@for(item in array){
 			@if(item==null){continue;}
-			@if(item.name=="delFlag"){continue;}
-			@if(item.name=="version"){continue;}
-			@if(item.name=="attachmentId"){continue;}
+			@if(item.username=="delFlag"){continue;}
+			@if(item.username=="version"){continue;}
+			@if(item.username=="attachmentId"){continue;}
             <div class="layui-inline">
             <label class="layui-form-label">${item.displayName}</label>
 				<div class="layui-input-inline">
 				@if(isEmpty(item.dictType)){
-					<input type="text" id="${item.name}" name="${item.name}"  value="\${${entity.code}.${item.name}${item.javaType=='Date'?',"yyyy-MM-dd"'}}"  ${isNotEmpty(item.verifyList)?('lay-verify="'+verifyFormat(item.verifyList)+'"'):''} class="layui-input${item.javaType=='Date'?' input-date'}" >
+					<input type="text" id="${item.username}" username="${item.username}"  value="\${${entity.username}.${item.username}${item.javaType=='Date'?',"yyyy-MM-dd"'}}"  ${isNotEmpty(item.verifyList)?('lay-verify="'+verifyFormat(item.verifyList)+'"'):''} class="layui-input${item.javaType=='Date'?' input-date'}" >
 				@}else{
 					<layui:simpleDictSelect style='layui-input-inline' type="${item.dictType}"
-						id="${item.name}" name="${item.name}" value="\${${entity.code}.${item.name}}" layVerify="${verifyFormat(item.verifyList)}" />
+						id="${item.username}" username="${item.username}" value="\${${entity.username}.${item.username}}" layVerify="${verifyFormat(item.verifyList)}" />
 				@}
 				</div>
             </div>
@@ -32,23 +32,23 @@
 	@}
 	@if(entity.attachment){
     <div class="layui-row">
-        <layui:attachment name="attachmentId" batchFileUUID="\${${entity.code}.attachmentId!uuid()}" isNew="false" bizId="\${${entity.code}.${entity.idAttribute.name}}" bizType="${entity.name}"/>
+        <layui:attachment username="attachmentId" batchFileUUID="\${${entity.username}.attachmentId!uuid()}" isNew="false" bizId="\${${entity.username}.${entity.idAttribute.username}}" bizType="${entity.username}"/>
     </div>
 	@}
 	<!-- 业务对象须有hidden字段，保存delFlag和version字段-->
 	@for(item in list){
 		@if(item==null){continue;}
-		@if((item.name=="delFlag")||(item.name=="version")){
-	<input type="hidden" name="${item.name}" value=\${${entity.code}.${item.name}} ${isNotEmpty(item.verifyList)?('lay-verify="'+verifyFormat(item.verifyList)+'"'):''}/>
+		@if((item.username=="delFlag")||(item.username=="version")){
+	<input type="hidden" username="${item.username}" value=\${${entity.username}.${item.username}} ${isNotEmpty(item.verifyList)?('lay-verify="'+verifyFormat(item.verifyList)+'"'):''}/>
 		@}
 	@}
-    <input type="hidden" name="${entity.idAttribute.name}" value=\${${entity.code}.${entity.idAttribute.name}} ${isNotEmpty(item.verifyList)?('lay-verify="'+verifyFormat(item.verifyList)+'"'):''}/>
+    <input type="hidden" username="${entity.idAttribute.username}" value=\${${entity.username}.${entity.idAttribute.username}} ${isNotEmpty(item.verifyList)?('lay-verify="'+verifyFormat(item.verifyList)+'"'):''}/>
     <layui:submitButtons id="updateButton" />
 </form>
 <!--#} -->
 <script>
 layui.use(['edit'], function(){
-    var ${entity.code}Edit = layui.edit
-    ${entity.code}Edit.init();
+    var ${entity.username}Edit = layui.edit
+    ${entity.username}Edit.init();
 });
 </script>
