--- a/admin-core/src/main/resources/codeTemplate/html/index.html
+++ b/admin-core/src/main/resources/codeTemplate/html/index.html
@@ -1,18 +1,18 @@
-<!--#layout("/common/layout.html",{"jsBase":"/js/${target.urlBase}/${entity.code}/"}){ -->
+<!--#layout("/common/layout.html",{"jsBase":"/js/${target.urlBase}/${entity.username}/"}){ -->
 <layui:searchForm formId="searchForm"  condition="\${search}">
 </layui:searchForm>
 
 <div class="layui-btn-group">
-    <layui:accessButton function="${entity.code}.add"  action="add">增加</layui:accessButton>
-    <layui:accessButton function="${entity.code}.edit"  action="edit">编辑</layui:accessButton>
-    <layui:accessButton function="${entity.code}.del"  action="del">删除</layui:accessButton>
+    <layui:accessButton function="${entity.username}.add"  action="add">增加</layui:accessButton>
+    <layui:accessButton function="${entity.username}.edit"  action="edit">编辑</layui:accessButton>
+    <layui:accessButton function="${entity.username}.del"  action="del">删除</layui:accessButton>
     @if(entity.includeExcel){
-     <layui:accessButton function="${entity.code}.exportDocument"  action="exportDocument">导出</layui:accessButton>
-     <layui:accessButton function="${entity.code}.importDocument"  action="importDocument">导入</layui:accessButton>
+     <layui:accessButton function="${entity.username}.exportDocument"  action="exportDocument">导出</layui:accessButton>
+     <layui:accessButton function="${entity.username}.importDocument"  action="importDocument">导入</layui:accessButton>
     @}
 </div>
 
-<table id="${entity.code}Table" lay-filter="${entity.code}Table"></table>
+<table id="${entity.username}Table" lay-filter="${entity.username}Table"></table>
 <!--#} -->
 <script>
 
